--- a/index.html
+++ b/index.html
@@ -1,24 +1,54 @@
 ---
 title: Landing Page
-layout: default
+layout: homepage
 ---
 
 <div class="container-fluid p-3 m-3">
-    <div class="row"> <!-- Top Container -->
-        <div class="col p-3 m-3">
-            <h1>Header</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero impedit, neque rem est at excepturi illum animi officiis ipsum eligendi totam aliquid facilis voluptatibus culpa suscipit delectus cum ipsam eveniet velit reiciendis soluta repellat? Asperiores vero repellendus nesciunt! Debitis, fuga. Recusandae ducimus excepturi ratione. Accusantium nostrum deserunt iusto saepe reiciendis odit eum ipsum modi delectus voluptatem voluptate quis fugiat consequuntur at, quos aut ratione cum minus, quibusdam temporibus culpa magni. Ipsum ut tenetur facilis sunt, quas recusandae! Nulla, recusandae unde. Porro non velit accusamus dolor consequuntur ipsum ipsam fugit temporibus, quasi voluptatibus magnam pariatur cumque animi suscipit dolorum? Laudantium, doloribus?</p>
-        </div>
-        <div class="col p-3 m-3">
+    <div class="row"> <!-- Introduction Container -->
+        <div class="col">
+
+            <h1>Hi, my name is Evan Yohe and I write software.</h1>
             
         </div>
     </div>
+    <div class="row"> <!-- Fixed Navbar Container -->
+        <div class="col">
 
-    <div class="row"> <!-- Middle Container -->
+            <a href="" class="button">About Me</a>
+            <a href="" class="button">Writings</a>
+            <a href="" class="button">Projects</a>
+            <a href="" class="button">Writings</a>
+            <a href="" class="button">LinkedIn</a>
 
+        </div>
     </div>
+    <div class="row"> <!-- Excerpt Paragraph Container -->
+        <div class="col">
 
-    <div class="row"> <!-- Bottom Container -->
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.
+            </p>
 
-    </div>  
+        </div>
+    </div>
+    <div class="row"> <!-- Three Column Skills Page-->
+        <div class="col">
+
+            <h6>Skill 1</h6>
+            <p>THINGS GO HERE</p>
+
+        </div>
+        <div class="col">
+
+            <h6>Skill 2</h6>
+            <p>THINGS GO</p>
+
+        </div>
+        <div class="col">
+
+            <h6>Skill 3</h6>
+            <p>THINGS</p>
+
+        </div>
+    </div>
 </div>
