--- a/about.html
+++ b/about.html
@@ -1,11 +1,21 @@
 ---
 layout: default
-title: My Blog
+title: About
 ---
 
-<div class="container-fluid p-3 m-3">
+<div class="container-fluid">
+    <div class="row row-col-1 row-col-sm-2 d-block d-sm-flex">
+        <div class="col"> <!-- Main Body Paragraphs -->
 
-    <h1>About Me Page</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolores temporibus assumenda provident cumque at voluptatibus aliquam molestiae et doloremque similique, ea explicabo consequatur? Reiciendis ratione, temporibus iure incidunt sapiente cupiditate, quam quis quae sed quos pariatur. Blanditiis vitae qui quos necessitatibus quas reprehenderit soluta. Architecto omnis obcaecati et unde nobis deleniti debitis rerum autem quo dolorem ea id ipsa, porro officiis atque quis amet neque aliquam blanditiis fuga nulla. Vitae minima adipisci beatae laborum, reiciendis mollitia modi facilis accusamus maxime eveniet vero minus maiores. Vel obcaecati, vero aliquam explicabo provident ea molestiae inventore soluta. Facere impedit, perferendis dolore repellat assumenda consequuntur saepe reprehenderit quaerat atque porro? Dolorum incidunt, cum pariatur ullam aperiam illo quo iste architecto dignissimos quibusdam facere corporis iusto aliquam, consectetur voluptas similique non eum deserunt magnam eligendi perferendis natus explicabo laboriosam! Quibusdam quis dolore in a error soluta quisquam! Eaque voluptates ratione quae dignissimos, vel autem odio rem unde! Provident explicabo minima perferendis minus iste consectetur expedita asperiores sapiente nobis fuga esse quos eos ratione dolores perspiciatis exercitationem at ullam animi temporibus, vel deserunt quas. Voluptate, dolor. Qui amet sint ad, incidunt adipisci tempore ipsam et dignissimos? Fugiat, exercitationem aspernatur explicabo illo, iusto optio ut blanditiis, voluptatibus voluptatem molestiae tempora nulla officiis unde. Ullam aliquid incidunt amet repellat nulla voluptate provident at omnis excepturi. Blanditiis laborum, vitae soluta veritatis in nam, mollitia repellendus at quia consectetur commodi voluptas quisquam asperiores esse accusamus odit fugit sequi! Architecto quas ullam sint perferendis consectetur minus deleniti nihil perspiciatis error.</p>
 
-    <p>Hello everyone, and thank you for stopping by my developers website. My name is Evan, I am a 23 year old student living in Seattle, Washington and I have been programming and problem solving since I was a teenager. </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat doloremque quam obcaecati deleniti autem, optio magni reprehenderit sed. Consectetur ab, nulla explicabo officia, voluptatibus aperiam laborum, nihil deserunt omnis similique in consequatur impedit odio. Molestias, itaque placeat quod explicabo est maxime! Repudiandae eligendi quidem fugiat eum soluta nemo quaerat ipsum quod doloremque incidunt quisquam quibusdam perspiciatis tempore pariatur temporibus non autem dicta eos esse iste, nobis veritatis. Nostrum porro necessitatibus hic distinctio molestiae sunt voluptatum nam nobis laborum sint reiciendis ducimus, adipisci nisi labore deleniti sed excepturi voluptate provident. Ducimus voluptatem accusantium eligendi atque, molestiae expedita? Aliquid dolor velit voluptates.</p>
+
+        </div>
+        <div class="col-5 text-center"> <!-- Sidebar -->
+            
+            {% include sidebar.html %}
+            
+        </div>
+    </div>
 </div>
