--- a/index.html
+++ b/index.html
@@ -1,54 +1,92 @@
 ---
-title: Landing Page
-layout: homepage
+layout: default
+title: Homepage
 ---
 
-<div class="container-fluid p-3 m-3">
-    <div class="row"> <!-- Introduction Container -->
-        <div class="col">
+<div class="container-fluid">
+    <div class="row m-5"> <!-- Introduction Container -->
+        <div class="col m-5">
 
-            <h1>Hi, my name is Evan Yohe and I write software.</h1>
+            <h1>Hi, my Name is Evan Yohe and I write Software.</h1>
             
         </div>
     </div>
-    <div class="row"> <!-- Fixed Navbar Container -->
-        <div class="col">
+    <div class="row row-col-1 row-col-sm-5 m-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
+        <div class="col m-1 g-0">
 
-            <a href="" class="button">About Me</a>
-            <a href="" class="button">Writings</a>
-            <a href="" class="button">Projects</a>
-            <a href="" class="button">Writings</a>
-            <a href="" class="button">LinkedIn</a>
+            <a href="/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
+
+        </div>
+        <div class="col m-1 g-0">
+
+            <a href="/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Projects</a>
+
+        </div>
+
+        <div class="col m-1 g-0">
+
+            <a href="/writing/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
+
+        </div>
+
+        <div class="col m-1 g-0">
+
+            <a href="https://github.com/EvanYohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Github</a>
+
+        </div>
+
+        <div class="col m-1 g-0">
+
+            <a href="https://linkedin.com/in/evan-yohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">LinkedIn</a>
 
         </div>
     </div>
-    <div class="row"> <!-- Excerpt Paragraph Container -->
-        <div class="col">
+    <div class="row m-2"> <!-- Exerpt Paragraph Container -->
+        <div class="col m-2 text-center">
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.</p>
 
         </div>
     </div>
-    <div class="row"> <!-- Three Column Skills Page-->
-        <div class="col">
+    <div class="row row-col-1 row-col-md-3 d-block d-md-flex m-2"> <!-- Three Column Skills Page-->
+        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
 
-            <h6>Skill 1</h6>
-            <p>THINGS GO HERE</p>
-
-        </div>
-        <div class="col">
-
-            <h6>Skill 2</h6>
-            <p>THINGS GO</p>
-
-        </div>
-        <div class="col">
-
-            <h6>Skill 3</h6>
-            <p>THINGS</p>
+            <h3 class="shadow rounded text-center">Skill 1</h3>
+            <hr class="bg-danger border-2 border-top border-danger">
+            <ul class="list-unstyled">
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+            </ul>
 
         </div>
+        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
+
+            <h3 class="shadow rounded text-center">Skill 2</h3>
+            <hr class="bg-danger border-2 border-top border-danger">
+            <ul class="list-unstyled">
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+            </ul>
+
+        </div>
+        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
+
+            <h3 class="shadow rounded text-center">Skill 3</h3>
+            <hr class="bg-danger border-2 border-top border-danger">
+            <ul class="list-unstyled">
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+                <li>Something</li>
+            </ul>
+
+        </div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error dolorem, at unde incidunt amet eius itaque optio tenetur? Odit magnam tenetur excepturi eius soluta commodi minus molestiae aliquam, repellendus quas quaerat consequuntur praesentium veritatis reiciendis voluptatibus asperiores provident exercitationem magni maxime eaque quae ullam, autem voluptatem eos! Fugiat, a.</p>
+
     </div>
 </div>
