--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+title: 404 Page
 ---
 
 <style type="text/css" media="screen">
@@ -18,8 +19,9 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
 
+  <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+
 </div>
