Update navigation baseurls

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@ title: Homepage
     <div class="row row-col-1 row-col-sm-5 m-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
         <div class="col m-1 g-0">
 
-            <a href="/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
+            <a href="{{site.baseurl}}/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
 
         </div>
         <div class="col m-1 g-0">
 
-            <a href="/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Projects</a>
+            <a href="{{site.baseurl}}/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Projects</a>
 
         </div>
 
         <div class="col m-1 g-0">
 
-            <a href="/writing/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
+            <a href="{{site.baseurl}}/writing/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
 
         </div>
 
