--- a/projects/index.html
+++ b/projects/index.html
@@ -4,51 +4,13 @@ title: Projects
 ---
 
 <div class="container-fluid p-3 m-3">
-    <div class="row"> <!-- Introduction Container -->
-        <div class="col">
-
-            <h1>Hi, my name is Evan Yohe and I write software.</h1>
-            
+    <div class="row">
+        <div class="col-7"> <!-- Dynamically load the content for each project into the div -->
+            <h4>This is a collection of all the personal and open source projects that I have worked on or contributed to.</h4>
+            <p></p>
         </div>
-    </div>
-    <div class="row"> <!-- Fixed Navbar Container -->
-        <div class="col">
-
-            <a href="" class="button">About Me</a>
-            <a href="" class="button">Writings</a>
-            <a href="" class="button">Projects</a>
-            <a href="" class="button">Writings</a>
-            <a href="" class="button">LinkedIn</a>
-
-        </div>
-    </div>
-    <div class="row"> <!-- Excerpt Paragraph Container -->
-        <div class="col">
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.
-            </p>
-
-        </div>
-    </div>
-    <div class="row"> <!-- Three Column Skills Page-->
-        <div class="col">
-
-            <h6>Skill 1</h6>
-            <p>THINGS GO HERE</p>
-
-        </div>
-        <div class="col">
-
-            <h6>Skill 2</h6>
-            <p>THINGS GO</p>
-
-        </div>
-        <div class="col">
-
-            <h6>Skill 3</h6>
-            <p>THINGS</p>
-
+        <div class="col-5"> <!-- Project Roadmap -->
+            <p>I had this nifty little idea to make a scrollable css based navigation map to show the writings I've done and what projects they are attatched to.</p>
         </div>
     </div>
 </div>
