--- a/404.html
+++ b/404.html
@@ -1,27 +1,43 @@
 ---
 permalink: /404.html
-layout: default
+layout: abort
 title: 404 Page
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<div class="container-fluid text-center m-2">
 
-<div class="container">
+  <h1>404 errors don't typically happen with this website so it's probably your fault...</h1>
+  <p><strong>But everyone told me that alienating people who come to the website is not a good idea so I'll just take the blame for this one.</strong></p>
 
-  <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <div class="row row-col-1 row-col-sm-5 m-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
+    <div class="col m-1 g-0">
+
+        <a href="{{site.baseurl}}/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
+
+    </div>
+    <div class="col m-1 g-0">
+
+        <a href="{{site.baseurl}}/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Projects</a>
+
+    </div>
+
+    <div class="col m-1 g-0">
+
+        <a href="{{site.baseurl}}/writing/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
+
+    </div>
+
+    <div class="col m-1 g-0">
+
+        <a href="https://github.com/EvanYohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Github</a>
+
+    </div>
+
+    <div class="col m-1 g-0">
+
+        <a href="https://linkedin.com/in/evan-yohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">LinkedIn</a>
+
+    </div>
+  </div>
 
 </div>
