--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Homepage
     <div class="row m-5"> <!-- Introduction Container -->
         <div class="col m-5">
 
-            <h1>Hi, my Name is Evan Yohe and I write Software.</h1>
+            <h1>Hi, my Name is Evan Yohe and I write software.</h1>
             
         </div>
     </div>
