--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About
 ---
 
-<div class="container-fluid">
+<div class="container-fluid m-2">
     <div class="row row-col-1 row-col-sm-2 d-block d-sm-flex">
         <div class="col"> <!-- Main Body Paragraphs -->
 
