--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Homepage
 ---
 
-<div class="container-fluid">
+<div class="container-fluid m-2">
     <div class="row m-5"> <!-- Introduction Container -->
         <div class="col m-5">
 
