--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: abort
 title: 404 Page
 ---
 
-<div class="container-fluid text-center m-2">
+<div class="container-fluid text-center">
 
   <h1>404 errors don't typically happen with this website so it's probably your fault...</h1>
   <p><strong>But everyone told me that alienating people who come to the website is not a good idea so I'll just take the blame for this one.</strong></p>
