--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Homepage
 ---
 
-<div class="container-fluid m-2">
+<div class="container-fluid">
     <div class="row m-5"> <!-- Introduction Container -->
         <div class="col m-5">
 
-            <h1>Hi, my Name is Evan Yohe and I write software.</h1>
+            <h1 class="text-center">Hi, my Name is Evan Yohe and I write software.</h1>
             
         </div>
     </div>
