--- a/projects/index.html
+++ b/projects/index.html
@@ -1,13 +1,13 @@
 ---
-layout: default
+layout: page
 title: Projects
 ---
 
-<div class="container-fluid m-2">
+<div class="container-fluid">
     <div class="row m-2">
         <h4>This is a collection of all the personal and open source projects that I have worked on or contributed to.</h4>
 
-        <div class="col-7"> <!-- Dynamically load the content for each project into the div -->
+        <div class="col-md-7 order-2 order-md-1"> <!-- Dynamically load the content for each project into the div -->
 
             <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
                 <div class="row">
@@ -34,20 +34,18 @@ title: Projects
                 </div>
                 <div class="row">
                   <div class="btn-group" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-primary" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">Previous</button>
-                    <button type="button" class="btn btn-primary" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"> Next</button>
+                    <button type="button" class="btn border border-primary border-3 rounded-0 d-block" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">Previous</button>
+                    <button type="button" class="btn border border-primary border-3 rounded-0 d-block" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"> Next</button>
                   </div>
                 </div>
               </div>
 
         </div>
-        <div class="col-5"> <!-- Project Roadmap -->
+        <div class="col-md-5 order-1 order-md-2"> <!-- Project Roadmap -->
             <h4 class="text-center">Road Map</h4>
 
             <div id="mapTarget" class="container m-2 text-center">
-                <p id="carouselZeroMap" style="display: none">Abba ipsum dolor sit amet consectetur adipisicing elit. Numquam veritatis consequatur recusandae voluptate ducimus deleniti nam fugiat saepe, accusamus debitis minima, dolorem fuga unde nobis?</p>
-                <p id="carouselOneMap" style="display: none">B52 ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt quas, hic similique neque sapiente repudiandae corrupti iste consequatur ad ut sed id amet aut assumenda!</p>
-                <p id="carouselTwoMap" style="display: none">CREAM ipsum dolor sit, amet consectetur adipisicing elit. Iste culpa necessitatibus unde adipisci! Corporis architecto deleniti esse vitae nesciunt provident excepturi perspiciatis voluptatum consequatur expedita?</p>
+              <p>Test</p>
             </div>
         </div>
     </div>
