--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ title: Homepage
 ---
 
 <div class="container-fluid">
-    <div class="row m-5"> <!-- Introduction Container -->
-        <div class="col m-5">
+    <div class="row m-2 m-sm-5"> <!-- Introduction Container -->
+        <div class="col m-2 m-sm-5">
 
             <h1 class="text-center">Hi, my Name is Evan Yohe and I write software.</h1>
             
         </div>
     </div>
-    <div class="row row-col-1 row-col-sm-5 m-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
+    <div class="row row-col-1 row-col-sm-5 m-2 m-sm-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
         <div class="col m-1 g-0">
 
             <a href="{{site.baseurl}}/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
@@ -41,17 +41,17 @@ title: Homepage
 
         </div>
     </div>
-    <div class="row m-2"> <!-- Exerpt Paragraph Container -->
-        <div class="col m-2 text-center">
+    <div class="row m-2 m-sm-5"> <!-- Exerpt Paragraph Container -->
+        <div class="col text-center">
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.</p>
 
         </div>
     </div>
     <div class="row row-col-1 row-col-md-3 d-block d-md-flex m-2"> <!-- Three Column Skills Page-->
-        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
+        <div class="col border border-primary border-2 m-1">
 
-            <h3 class="shadow rounded text-center">Skill 1</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Skill 1</h3>
             <hr class="bg-danger border-2 border-top border-danger">
             <ul class="list-unstyled">
                 <li>Something</li>
@@ -61,9 +61,9 @@ title: Homepage
             </ul>
 
         </div>
-        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
+        <div class="col border border-primary border-2 m-1">
 
-            <h3 class="shadow rounded text-center">Skill 2</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Skill 2</h3>
             <hr class="bg-danger border-2 border-top border-danger">
             <ul class="list-unstyled">
                 <li>Something</li>
@@ -73,9 +73,9 @@ title: Homepage
             </ul>
 
         </div>
-        <div class="col border border-primary border-2 m-3 mb-2 pt-2 pb-2">
+        <div class="col border border-primary border-2 m-1">
 
-            <h3 class="shadow rounded text-center">Skill 3</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Skill 3</h3>
             <hr class="bg-danger border-2 border-top border-danger">
             <ul class="list-unstyled">
                 <li>Something</li>
