--- a/index.html
+++ b/index.html
@@ -1,92 +1,92 @@
 ---
 layout: default
 title: Homepage
+description: "Welcome to my portfolio website; come check out all my writings and share all the updates and progress reports on various projects that I am working on."
+keywords: ["portfolio", "blog", "technology", "programming", "software", "developer", "data", "science"]
+autonav: false
 ---
 
 <div class="container-fluid">
-    <div class="row m-2 m-sm-5"> <!-- Introduction Container -->
+    <div class="row m-2 m-sm-5">
         <div class="col m-2 m-sm-5">
 
-            <h1 class="text-center">Hi, my Name is Evan Yohe and I write software.</h1>
+            <h4 class="text-start">Hi, my name is</h4>
+            <h1 class="text-center"><b>Evan Yohe</b></h1>
+            <h2 class="text-end">and I build tools and solutions for <b>your problems</b>.</h2>
             
         </div>
     </div>
-    <div class="row row-col-1 row-col-sm-5 m-2 m-sm-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex"> <!-- Fixed Navbar Container -->
+    <div class="row row-col-1 row-col-sm-5 m-2 m-sm-5 justify-content-center shadow-lg bg-light rounded d-block d-sm-flex">
         <div class="col m-1 g-0">
 
-            <a href="{{site.baseurl}}/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
+            <a href="{{ site.url }}/about.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">About</a>
 
         </div>
         <div class="col m-1 g-0">
 
-            <a href="{{site.baseurl}}/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Projects</a>
-
-        </div>
-
-        <div class="col m-1 g-0">
-
-            <a href="{{site.baseurl}}/writing/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
+            <a href="{{ site.url }}/projects/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block disabled">Projects</a>
 
         </div>
 
         <div class="col m-1 g-0">
 
-            <a href="https://github.com/EvanYohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Github</a>
+            <a href="{{ site.url }}/writings/index.html" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Writings</a>
 
         </div>
 
         <div class="col m-1 g-0">
 
-            <a href="https://linkedin.com/in/evan-yohe" class="btn btn-lg border border-primary border-2 rounded-0 d-block">LinkedIn</a>
+            <a href="{{ site.github_link }}" class="btn btn-lg border border-primary border-2 rounded-0 d-block">Github</a>
+
+        </div>
+
+        <div class="col m-1 g-0">
+
+            <a href="{{ site.linkedin_link }}" class="btn btn-lg border border-primary border-2 rounded-0 d-block">LinkedIn</a>
 
         </div>
     </div>
-    <div class="row m-2 m-sm-5"> <!-- Exerpt Paragraph Container -->
-        <div class="col text-center">
+    <div class="row m-3 m-sm-5">
+        <div class="col justify-content-center text-center">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sint aperiam nulla consequatur laudantium excepturi ad quaerat et perspiciatis? Consequuntur eius reprehenderit, sint voluptatum voluptate illum. Veniam beatae repudiandae enim minima, error corrupti molestiae. Exercitationem id iste ratione repellendus qui sunt veniam voluptate unde consequuntur quasi, soluta iure nisi inventore voluptatem, quod accusantium ex illum porro temporibus minus architecto. Ad eos tempore esse quisquam quia fugit numquam in laborum nesciunt, harum porro ullam nemo voluptates magnam ea sunt nulla nihil aliquid placeat dicta hic. Ab similique dolorum rerum excepturi odit veniam aut, architecto dicta? Itaque quod odio molestias rerum sed.</p>
-
+            <p class="fs-4"><q><b>Function over form.</b> That was my design paradigm when I approached building a portfolio. I wanted a website that would let people find me, figure out how to contact me, and showcase my skills and abilities to the people who want to see.</q></p>
+            <a href="{% post_url /writing/2022-08-10-designing-this-website %}" class="btn btn-lg border border-primary border-2 rounded-0">Read about the website design here!</a>
         </div>
     </div>
-    <div class="row row-col-1 row-col-md-3 d-block d-md-flex m-2"> <!-- Three Column Skills Page-->
+    <div class="row row-col-1 row-col-md-3 d-block d-md-flex m-2">
         <div class="col border border-primary border-2 m-1">
 
-            <h3 class="shadow rounded text-center p-1 m-1">Skill 1</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Notable<br>Skills</h3>
             <hr class="bg-danger border-2 border-top border-danger">
+            <p class="text-center">A lot of the new devs that pop out of the woods these days are greener than the trees. You won't find that with me.</p>
             <ul class="list-unstyled">
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
+                <li class="p-1">Systems Design and Structuring</li>
+                <li class="p-1">Intermediate knowledge of statistics, calculus, and linear algebra</li>
+                <li class="p-1">Data structure and algorithms</li>
+                <li class="p-1">Cloudless, Serverless, buzzwords!</li>
             </ul>
 
         </div>
         <div class="col border border-primary border-2 m-1">
 
-            <h3 class="shadow rounded text-center p-1 m-1">Skill 2</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Language<br>Fluency</h3>
             <hr class="bg-danger border-2 border-top border-danger">
-            <ul class="list-unstyled">
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
+            <p class="text-center">I started programming when I was twelve years old and my toolkit has only grown since then. These are the languages that I am currently fluent with.</p>
+            <ul class="text-center list-unstyled fs-4">
+                <li>Rust</li>
+                <li>Java</li>
+                <li>Javascript</li>
+                <li>Python 3</li>
             </ul>
 
         </div>
         <div class="col border border-primary border-2 m-1">
-
-            <h3 class="shadow rounded text-center p-1 m-1">Skill 3</h3>
+            <h3 class="shadow rounded text-center p-1 m-1">Learning<br>Advocacy</h3>
             <hr class="bg-danger border-2 border-top border-danger">
-            <ul class="list-unstyled">
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-            </ul>
-
+            <p class="text-center">I am a huge advocate for creating as many points of access into the computer science field as possible. As long as we back that up by producing high quality learning materials to reduce the amount of recurring problems in new developers.</p>
         </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error dolorem, at unde incidunt amet eius itaque optio tenetur? Odit magnam tenetur excepturi eius soluta commodi minus molestiae aliquam, repellendus quas quaerat consequuntur praesentium veritatis reiciendis voluptatibus asperiores provident exercitationem magni maxime eaque quae ullam, autem voluptatem eos! Fugiat, a.</p>
+        <p class="text-center">Thank you for taking the time to check out my website. If you're looking contant information or anything related to getting in touch with me, head over to the [about page]. Throughout my time as a developer, I have worked on a wide variety of different projects and challenges. If you are interested at all in looking at some of those things that I have done, check them out on the projects page. "I know a significant part of having a portfolio is to show off your projects, but the projects page is a project in-and-of itself and is currently under construction." I also love to write and document my learning process to track and show how I have changed over time, as well as opening up my experiences to help teach others. If you;re interested in any of the things I have to say, check out my pieces in the [writings] section.</p>
 
     </div>
 </div>
