--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ autonav: false
         <div class="col justify-content-center text-center">
 
             <p class="fs-4"><q><b>Function over form.</b> That was my design paradigm when I approached building a portfolio. I wanted a website that would let people find me, figure out how to contact me, and showcase my skills and abilities to the people who want to see.</q></p>
-            <a href="{% post_url /writings/2022-08-10-designing-this-website %}" class="btn btn-lg border border-primary border-2 rounded-0">Read about the website design here!</a>
+            <a href="{% post_url {{ site.url }}/writings/2022-08-10-designing-this-website %}" class="btn btn-lg border border-primary border-2 rounded-0">Read about the website design here!</a>
         </div>
     </div>
     <div class="row row-col-1 row-col-md-3 d-block d-md-flex m-2">
